--- a/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/MainPage.xaml
@@ -64,7 +64,7 @@
                                  Padding="30,0"
                                  BackgroundColor="SkyBlue">
 
-                <!-- 「言語を選ぶ」 -->
+                <!-- ロケール選択 -->
                 <Picker x:Name="picker"
                     HorizontalOptions="Center"
                     ItemsSource="{Binding LocaleIdCollection}"
