--- a/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TileCropPage.xaml
@@ -69,7 +69,7 @@
                        FontSize="Large"/>
             </HorizontalStackLayout>
 
-            <!-- 「言語を選ぶ」 -->
+            <!-- ロケール選択 -->
             <Picker Grid.Column="1"
                     VerticalOptions="Center"
                     HorizontalOptions="End"
