--- a/Visual Studio/2D RPG Negiramen/Views/ConfigurationPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/ConfigurationPage.xaml
@@ -152,7 +152,7 @@
                 SemanticProperties.Hint="Overwrite project to Unity"
                 Command="{Binding PushStartupToUnityAssetsFolderCommand}"/>
 
-        <Grid RowDefinitions="*,*" ColumnDefinitions="20,*,64" Margin="10,10,10,10">
+        <Grid RowDefinitions="*,*" ColumnDefinitions="20,*" Margin="10,10,10,10">
             <!-- 「キャッシュ・ディレクトリー」 -->
             <Label Grid.Row="0" Grid.Column="1"
                    Text="{app:Translate CacheDirectory}"
@@ -166,13 +166,9 @@
                    SemanticProperties.Hint="Folder emoji"/>
 
             <Entry Grid.Row="1" Grid.Column="1"
-                   IsEnabled="False"
-                   Text="{Binding CacheDirectoryAsStr}"/>
-
-            <!-- 「開く」 -->
-            <Button Grid.Row="1" Grid.Column="2"
-                    Text="{app:Translate Open}"
-                    Clicked="OpensCacheDirectoryButton_Clicked"/>
+                   Text="{Binding CacheDirectoryAsStr}"
+                   IsReadOnly="True"
+                   BackgroundColor="Transparent"/>
         </Grid>
 
     </VerticalStackLayout>
