ビューモデル

--- a/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
@@ -5,9 +5,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="_2D_RPG_Negiramen.Views.TilesetListPage"
              Title="TilesetListPage"
-             Loaded="ContentPage_Loaded"
-             SizeChanged="ContentPage_SizeChanged">
-
+             Loaded="ContentPage_Loaded">
+    <!--
+    SizeChanged="ContentPage_SizeChanged"
+    -->
+    
+    
     <!-- 束縛しているビューモデル -->
     <ContentPage.BindingContext>
         <viewModels:TilesetListPageViewModel />
@@ -69,6 +72,7 @@
                         ItemsLayout="VerticalGrid, 4"
                         ItemsLayout="VerticalList"
                         ItemsLayout="HorizontalList"
+                        ItemsLayout="{Binding ItemsLayout}"
 
                         is not work
                         ItemsLayout="HorizontalGrid, 2"
@@ -80,7 +84,8 @@
         -->
         <CollectionView ItemsSource="{Binding TilesetRecordVMCollection}"
                         ItemsLayout="{Binding ItemsLayout}"
-                        SelectionMode="Single">
+                        SelectionMode="Single"
+                        SizeChanged="CollectionView_SizeChanged">
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid RowDefinitions="128,20"
