ビューモデル

--- a/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
@@ -11,10 +11,11 @@
     -->
     
     
-    <!-- 束縛しているビューモデル -->
+    <!-- 束縛しているビューモデル
     <ContentPage.BindingContext>
         <viewModels:TilesetListPageViewModel />
     </ContentPage.BindingContext>
+    -->
 
     <!--    画面内タイトルバー
             ==================
