--- a/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/TilesetListPage.xaml
@@ -63,7 +63,7 @@
             １段目     コレクション・ビュー
             ２段目     ボタン・エリア
     -->
-    <Grid RowDefinitions="*,80">
+    <Grid RowDefinitions="*,152">
 
         <!--
                         ok
@@ -107,13 +107,41 @@
         </CollectionView>
 
         <Grid Grid.Row="1"
+              RowDefinitions="20,48,20,48" ColumnDefinitions="100,320,*"
+              Padding="8,8,8,8"
               BackgroundColor="SkyBlue">
 
-            <Button WidthRequest="100"
+            <!--    １段目
+                    ======
+            -->
+            <Label Grid.Row="0" Grid.Column="1"
+                   Text="UUID"/>
+
+            <!--    ２段目
+                    ======
+            -->
+            <Button Grid.Row="1" Grid.Column="0"
+                    WidthRequest="100"
                     HeightRequest="20"
                     Text="タイル切抜き"
                     Clicked="TileCropButton_Clicked"/>
 
+            <Entry Grid.Row="1" Grid.Column="1"
+                   Text="XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX"
+                   BackgroundColor="Transparent"/>
+
+            <!--    ３段目
+                    ======
+            -->
+            <Label Grid.Row="2" Grid.Column="1"
+                   Text="タイルセット タイトル"/>
+
+            <!--    ４段目
+                    ======
+            -->
+            <Entry Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2"
+                   Placeholder="冒険の荒野"
+                   Text=""/>
         </Grid>
     </Grid>
 </ContentPage>
