--- a/Visual Studio/2D RPG Negiramen/Views/LoginPage2.xaml
+++ b/Visual Studio/2D RPG Negiramen/Views/LoginPage2.xaml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+             xmlns:app="clr-namespace:_2D_RPG_Negiramen"
+             xmlns:viewModels="clr-namespace:_2D_RPG_Negiramen.ViewModels"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="_2D_RPG_Negiramen.Views.LoginPage2"
-             Title="LoginPage2">
+             x:Class="_2D_RPG_Negiramen.Views.Login2Page"
+             Title="Login2Page">
+
+    <!-- 束縛しているビューモデル -->
+    <ContentPage.BindingContext>
+        <viewModels:Login2PageViewModel />
+    </ContentPage.BindingContext>
+
     <VerticalStackLayout>
         <Label 
             Text="Welcome to .NET MAUI!"
